--- a/.github/workflows/scheduled_run.yml
+++ b/.github/workflows/scheduled_run.yml
@@ -26,8 +26,8 @@ jobs:
 
       - name: Commit & push changes (as Orkhan)
         run: |
-          git config user.name "Orkhan Abbasli"
-          git config user.email "OrkhanAbbasli@users.noreply.github.com"
+          git config user.name "Mahir Abdullayev"
+          git config user.email "MahirAbdullayev@users.noreply.github.com"
           git add README.md
           git commit -m "Update README timestamp" || echo "No changes"
           git push
